# nncli

./: .coveragerc  .gitignore  .mailmap  .pylintrc  .travis.yml  .vulture_whitelist.py  CHANGELOG.rst  CHANGELOG.txt  LICENSE  Makefile  Pipfile  README.md  README.rst  TODO.txt  nncli  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  todo.txt  tox.ini
.github/workflows/: codeql-analysis.yml  python-package.yml
contrib/: clear_ids.py  sncli_to_nn.py
docs/: Makefile  docutils.conf
docs/source/: conf.py  configuration.rst  index.rst  robots.txt  usage.rst
nncli/: __init__.py  __main__.py  cli.py  clipboard.py  config.py  gui.py  log.py  nextcloud_note.py  nncli.py  notes_db.py  temp.py  user_input.py  utils.py  view_help.py  view_log.py  view_note.py  view_titles.py
nnotes_cli/: __init__.py  clipboard.py  config.py  nextcloud_note.py  nncli.py  nnotes.py  notes_db.py  temp.py  user_input.py  utils.py  view_help.py  view_log.py  view_note.py  view_titles.py
tests/: test_config.py  test_gui.py  test_nncli.py  test_version.py
