[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "nncli"
author = "Daniel Moch"
author-email = "daniel@danielmoch.com"
home-page = "https://nncli.org"
description-file = "README.rst"
requires = ["urwid", "requests", "appdirs", "click"]
classifiers = ["License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only"]
requires-python = ">=3"

[tool.flit.metadata.urls]
"Source Code" = "https://git.danielmoch.com"

[tool.flit.metadata.requires-extra]
dev = ["pipenv"]
doc = ["sphinx"]

[tool.flit.scripts]
nncli = "nncli.cli:main"
